--- a/string.html
+++ b/string.html
@@ -8,7 +8,7 @@
 <body>
     
 </body>
-<script src="second.js"> </script>
+<script src="strings.js">
 
-<script src="conditional statements"> </script>
+</script>
 </html>
