--- a/practice.html
+++ b/practice.html
@@ -8,7 +8,7 @@
 <body>
     
 </body>
-<script src="practice.js, practice2.js, practice3.js, practice5.js, practice6.js"></script>
+<script src="practice.js"></script>
 
 
 </html>
