--- a/DOM.html
+++ b/DOM.html
@@ -3,12 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS with me</title>
+    <link rel="stylesheet" href="style1.css">
+
 </head>
 <body>
+
+    <div id="box" name="Pallavi" > this is a div
+        <ul>list
+            <li>item1</li>
+            <li>item2</li>
+            <li> item </li>
+        </ul>
+     </div>
+    <p>this is a simple paragraph </p>
+
+
+ <!--- <h1 style = "visibility: hidden;"> Old Heading</h1>
+<div>
+    <h3>Fruits</h3>
+    <ul>
+        <li>Mango </li>
+        <li>litchi </li>
+        <li>grapes </li>
+    </ul>
+</div>
+--->
+
+    <script src="DOM.js"></script>
     
+
 </body>
-<script src="SOM.js"></script>
+
 
 
 </html>
