--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div>ABCD</div>
-    <h1>DOM demo by me</h1>
-    <h4>Topic1 : Starter Code</h4>
+    <h1 class="heading-class">DOM demo by me</h1>
+    <h1 class="heading-class">It's me again</h2>
+    <h4 class="heading-class">Topic1 : Starter Code</h4>
     <p>Let's learn DOM concepts in details.</p>
+    <p>2nd paragraph.</p>
     <button>Click me!</button>
     <script src = "script.js"></script>
 </body>
