--- a/practice2.html
+++ b/practice2.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="practice2.css">
 </head>
 <body>
+  <!----  <h2>Hello Javascript!</h2>
+    <div class = "box">first div</div>
+    <div class = "box">second div</div>
+    <div class = "box">third div</div>
+
+    --->
     
 </body>
 <script src="practice2.js"></script>
